# librime-octagram

./: CMakeLists.txt
src/: gram_db.cc  gram_db.h  octagram.cc
